--- a/Roomba/Makefile.common
+++ b/Roomba/Makefile.common
@@ -1,3 +1,14 @@
+#CFLAGS=-I./include -I/usr/include -std=c++0x -Wall -pedantic -g3 $(OPT)
+CFLAGS=-g -O2 -I./include -I/usr/include -I/usr/local/include -std=c++0x -Wall -pedantic $(OPT)
+DEFS=-L/usr/lib -L/usr/local/lib -lboost_system -lwiringPi
+DEFSCV=$(DEFS) -lopencv_core -lopencv_highgui -lopencv_objdetect -lboost_thread -lboost_signals -lopencv_imgproc
+DEFSTH=$(DEFSCV) -lpthread 
+DEFSWT=$(DEFSTH) -lwt -lwthttp  
+all: roombacontroller roombaweb mjpegserver
+OBJDIR=./obj/
+SRCDIR=./src/
+INCDIR=./include/
+
 $(OBJDIR)roombasensors.o: $(SRCDIR)roombasensors.cpp $(INCDIR)roombasensors.h
 	$(CXX) $(CFLAGS) -c -o $@ $<
 
@@ -17,6 +28,9 @@ $(OBJDIR)util.o: $(SRCDIR)util.cpp $(INCDIR)util.h $(INCDIR)nullptr.h
 	$(CXX) $(CFLAGS) -c -o $@ $<
 
 $(OBJDIR)wtutil.o: $(SRCDIR)wtutil.cpp $(INCDIR)wtutil.h
+	$(CXX) $(CFLAGS) -c -o $@ $<
+
+$(OBJDIR)gpio.o: $(SRCDIR)gpio.cpp $(INCDIR)gpio.h
 	$(CXX) $(CFLAGS) -c -o $@ $<
 
 $(OBJDIR)roombawebimagepush.o: $(SRCDIR)roombawebimagepush.cpp $(INCDIR)roombawebimagepush.h
@@ -46,11 +60,11 @@ $(OBJDIR)mjpegservermain.o: $(SRCDIR)mjpegservermain.cpp $(INCDIR)opencvmat.h
 cameratest: $(OBJDIR)opencvimage.o $(OBJDIR)util.o $(OBJDIR)camera.o $(OBJDIR)cameratest.o
 	$(CXX) $(OBJDIR)opencvimage.o $(OBJDIR)util.o $(OBJDIR)camera.o $(OBJDIR)cameratest.o $(DEFSCV) -o cameratest
 
-roombacontroller: $(OBJDIR)roombasensors.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)util.o $(OBJDIR)main.o
-	$(CXX) $(OBJDIR)roombasensors.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)util.o $(OBJDIR)main.o $(DEFSTH) -o roombacontroller
+roombacontroller: $(OBJDIR)roombasensors.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)util.o $(OBJDIR)gpio.o $(OBJDIR)main.o
+	$(CXX) $(OBJDIR)roombasensors.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)util.o $(OBJDIR)gpio.o $(OBJDIR)main.o $(DEFSTH) -o roombacontroller
 
-roombaweb: $(OBJDIR)roombasensors.o $(OBJDIR)camera.o $(OBJDIR)mjpegserver.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)opencvimage.o $(OBJDIR)util.o $(OBJDIR)wtutil.o $(OBJDIR)roombawebserver.o $(OBJDIR)roombawebimagepush.o $(OBJDIR)roombawebapplication.o $(OBJDIR)webmain.o
-	 $(CXX) $(OBJDIR)roombasensors.o $(OBJDIR)camera.o $(OBJDIR)mjpegserver.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)opencvimage.o $(OBJDIR)util.o $(OBJDIR)wtutil.o $(OBJDIR)roombawebserver.o $(OBJDIR)roombawebimagepush.o $(OBJDIR)roombawebapplication.o $(OBJDIR)webmain.o $(DEFSWT) -o roombaweb
+roombaweb: $(OBJDIR)roombasensors.o $(OBJDIR)camera.o $(OBJDIR)mjpegserver.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)opencvimage.o $(OBJDIR)util.o $(OBJDIR)wtutil.o $(OBJDIR)roombawebserver.o $(OBJDIR)roombawebimagepush.o $(OBJDIR)roombawebapplication.o $(OBJDIR)gpio.o $(OBJDIR)webmain.o
+	 $(CXX) $(OBJDIR)roombasensors.o $(OBJDIR)camera.o $(OBJDIR)mjpegserver.o $(OBJDIR)serialport.o $(OBJDIR)roombacontrol.o $(OBJDIR)opencvimage.o $(OBJDIR)util.o $(OBJDIR)wtutil.o $(OBJDIR)roombawebserver.o $(OBJDIR)roombawebimagepush.o $(OBJDIR)roombawebapplication.o $(OBJDIR)webmain.o $(OBJDIR)gpio.o $(DEFSWT) -o roombaweb
 
 mjpegserver: $(OBJDIR)camera.o $(OBJDIR)mjpegserver.o $(OBJDIR)opencvimage.o $(OBJDIR)mjpegservermain.o 
 	$(CXX) $(OBJDIR)camera.o $(OBJDIR)mjpegserver.o $(OBJDIR)opencvimage.o $(OBJDIR)mjpegservermain.o $(DEFSTH) -o $@
