--- a/Roomba/Makefile.common
+++ b/Roomba/Makefile.common
@@ -1,6 +1,7 @@
 #CFLAGS=-I./include -I/usr/include -std=c++0x -Wall -pedantic -g3 $(OPT)
-CFLAGS=-g -O2 -I./include -I/usr/include -I/usr/local/include -std=c++0x -Wall -pedantic $(OPT)
-DEFS=-L/usr/lib -L/usr/local/lib -lboost_system -lwiringPi
+#CFLAGS=-g -O2 -I./include -I/usr/include -std=c++0x -Wall -pedantic $(OPT)
+CFLAGS=-g -O2 -I./include -I/usr/include -std=c++11 -Wall -pedantic $(OPT)
+DEFS=-L/usr/lib -L/usr/local/lib -lboost_system 
 DEFSCV=$(DEFS) -lopencv_core -lopencv_highgui -lopencv_objdetect -lboost_thread -lboost_signals -lopencv_imgproc
 DEFSTH=$(DEFSCV) -lpthread 
 DEFSWT=$(DEFSTH) -lwt -lwthttp  
